# src/application/testimonial/handlers/command_handlers.go
@@ -12,16 +12,14 @@ type TestimonialCommandHandlers struct {
 	UpdateHandler  *commands.UpdateTestimonialCommandHandler
 	DeleteHandler  *commands.DeleteTestimonialCommandHandler
 	ApproveHandler *commands.ApproveTestimonialCommandHandler
-	BulkHandler    *commands.BulkTestimonialCommandHandler
 }
 
-func NewTestimonialCommandHandlers(repo repositories.TestimonialRepository) *TestimonialCommandHandlers {
+func NewTestimonialCommandHandlers(repo repositories.CachedTestimonialRepository) *TestimonialCommandHandlers {
 	return &TestimonialCommandHandlers{
 		CreateHandler:  commands.NewCreateTestimonialCommandHandler(repo),
 		UpdateHandler:  commands.NewUpdateTestimonialCommandHandler(repo),
 		DeleteHandler:  commands.NewDeleteTestimonialCommandHandler(repo),
 		ApproveHandler: commands.NewApproveTestimonialCommandHandler(repo),
-		BulkHandler:    commands.NewBulkTestimonialCommandHandler(repo),
 	}
 }
 
@@ -40,20 +38,4 @@ func (h *TestimonialCommandHandlers) DeleteTestimonial(ctx context.Context, cmd 
 
 func (h *TestimonialCommandHandlers) ApproveTestimonial(ctx context.Context, cmd dtos.ApproveTestimonialCommand) (*dtos.CommandResult, error) {
 	return h.ApproveHandler.Handle(ctx, cmd)
-}
-
-func (h *TestimonialCommandHandlers) BulkApproveTestimonials(ctx context.Context, cmd dtos.BulkApproveTestimonialsCommand) (*dtos.CommandResult, error) {
-	return h.BulkHandler.HandleBulkApprove(ctx, cmd)
-}
-
-func (h *TestimonialCommandHandlers) BulkDeactivateTestimonials(ctx context.Context, cmd dtos.BulkDeactivateTestimonialsCommand) (*dtos.CommandResult, error) {
-	return h.BulkHandler.HandleBulkDeactivate(ctx, cmd)
-}
-
-func (h *TestimonialCommandHandlers) BulkActivateTestimonials(ctx context.Context, cmd dtos.BulkActivateTestimonialsCommand) (*dtos.CommandResult, error) {
-	return h.BulkHandler.HandleBulkActivate(ctx, cmd)
-}
-
-func (h *TestimonialCommandHandlers) BulkDeleteTestimonials(ctx context.Context, cmd dtos.BulkDeleteTestimonialsCommand) (*dtos.CommandResult, error) {
-	return h.BulkHandler.HandleBulkDelete(ctx, cmd)
 }
